# zphelper

./: .env.example  .gitignore  README.md  pyproject.toml
data/: user_memory.example.json
docs/design_history/: M1_project_bootstrap.md  M2_schedule_summary.md  M3_weather_commute.md  M4_todo_automation.md  M5_leaving_checklist.md  M6_planner_and_llm_fallbacks.md  M7_observability_and_regression.md  README.md  U1_long_term_memory.md  U2_agent_evaluation.md  U3_clarification_loop.md
scripts/: run_agent_eval.py  run_regression.py
src/personal_ops_agent/: main.py
src/personal_ops_agent/api/: routes.py  schemas.py
src/personal_ops_agent/calendar/: __init__.py  time_parser.py
src/personal_ops_agent/checklist/: __init__.py  (+2 more)
tests/: m4_todo_eval_runner.py  test_calendar_create_m6.py  test_calendar_oauth.py  test_calendar_time_parser.py  test_checklist_m5.py  test_commute_context.py  test_commute_m3.py  test_eta_normalize.py  test_google_eta_live.py  test_llm_live_connectivity.py  test_llm_router.py  test_llm_router_integration.py  test_location_extractor.py  test_m7_observability.py  test_planner.py  test_planner_live_connectivity.py  test_schedule_m2.py  test_schedule_todo_integration.py  test_smoke.py  test_timewindow_llm.py  test_timewindow_llm_live.py  test_timewindow_rules.py  test_todo_m4.py  test_weather_query.py
tests/fixtures/: agent_eval_v1.json  eta_peak.json  eta_rainy.json  eta_sunny.json  golden_m7_v1.json  sample_calendar.json  sample_eta.json  sample_weather.json  todo_m4_cases.json  weather_peak.json  weather_rainy.json  weather_sunny.json
(+51 files in other folders)
